--- a/ChatWave/Auth/templates/forgot_password/new_password.html
+++ b/ChatWave/Auth/templates/forgot_password/new_password.html
@@ -92,7 +92,7 @@
         .left-side {
             flex: 1;
             position: relative;
-            background: url('https://media.discordapp.net/attachments/958193242892042261/1312454950034608168/sunset.png?ex=675914ac&is=6757c32c&hm=cd5f2ee9e08021e9615f73a488dcb4f57d39f8a3488321b9dd9b1de149da2705&=&format=webp&quality=lossless') no-repeat center center;
+            background: url('https://i.pinimg.com/736x/bb/60/6a/bb606a9d4289f9ac86ed2852789b4807.jpg') no-repeat center center;
             background-size: cover;
             background-color: #2a1215;
             image-rendering: pixelated;
